--- a/.gitignore
+++ b/.gitignore
@@ -7,14 +7,16 @@
 # Ignore bundler config.
 /.bundle
 
-# Ignore the default SQLite database.
-/db/*.sqlite3
-/db/*.sqlite3-journal
-
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
 .tags
 *.swp
+
+# Dashgum
 vendor/Dashgum
 /vendor/assets/src
+
+# gemset
+/.permits/
+
