--- a/.env
+++ b/.env
@@ -1,1 +1,12 @@
 #DATABASE_URL=postgresql://localhost/permits_dev?pool=5
+
+# AWS
+
+AWS_ACCESS_KEY_ID=AKIAJRN73L7WWLHZGC2A
+AWS_SECRET_ACCESS_KEY=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
+FOG_PROVIDER=AWS
+FOG_DIRECTORY=filmshoots-assets
+FOG_REGION=us-east-1
+ASSET_SYNC_GZIP_COMPRESSION=true
+ASSET_SYNC_MANIFEST=true
+ASSET_SYNC_EXISTING_REMOTE_FILES=keep
