Added .env-sample, removed keys. doh.

--- a/.env-sample
+++ b/.env-sample
@@ -2,8 +2,8 @@
 
 # AWS
 
-AWS_ACCESS_KEY_ID=AKIAJRN73L7WWLHZGC2A
-AWS_SECRET_ACCESS_KEY=ebqvrcpLCDVEE76+QS6ef4PHsmZ5XKEMUevDslMW
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
 FOG_PROVIDER=AWS
 FOG_DIRECTORY=filmshoots-assets
 FOG_REGION=us-east-1
